# lot

./: AGENTS.md  Cargo.toml  DECISIONS.md  DOUBLE_BUFFER_RESEARCH.md  LICENSE  README.md  mise.toml
.codex/: config.toml
.github/workflows/: source-release.yml
docs/: source-releases.md  spec.md
docs/research/: terminal-rendering.md
fixtures/: two_frames.json
scripts/: fetch-dotlottie-rs.sh  package-source-release.sh  validate-source-release.sh
src/: app.rs  cli.rs  input.rs  lib.rs  main.rs  tui.rs  tui_playlist.rs
src/playlist/: discover.rs  mod.rs  state.rs  watch.rs
src/render/: headless.rs  mod.rs
src/terminal/: kitty.rs
tests/: cli.rs  playlist_interactive.rs  playlist_state.rs  playlist_stress.rs  playlist_watch.rs
tests/common/: mod.rs
