[package]
name = "lot"
version = "0.1.0"
edition = "2024"
description = "Inspect Lottie and dotLottie files in the terminal"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
dotlottie-rs = { path = "deps/dotlottie-rs/dotlottie-rs", default-features = false, features = ["dotlottie"] }
ratatui = { version = "0.30.0", default-features = false, features = ["crossterm"] }
serde_json = "1.0.149"
ureq = { version = "3.2.0", default-features = false, features = ["rustls"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
